--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bills-tracker": "file:",
     "firebase": "^9.14.0",
     "google-auth-library": "^8.0.2",
     "google-spreadsheet": "^4.1.1",
