--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_REDIRECT_URI=https://v0-new-project-ng97sdmqkuq-pfd3oapju.vercel.app
-REACT_APP_BASE_URI=https://v0-new-project-ng97sdmqkuq-pfd3oapju.vercel.app/api/oauth2callback
+REACT_APP_BASE_URI=https://v0-new-project-ng97sdmqkuq-pfd3oapju.vercel.app
 REACT_APP_GOOGLE_OAUTH_CLIENT_ID=61613374587-ng7kqad458ne7r6s6n7j8o4522qgd7b5.apps.googleusercontent.com
 REACT_APP_GOOGLE_OAUTH_CLIENT_SECRET=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
